--- a/src/app/management/pages/banner-management/banner-management.component.html
+++ b/src/app/management/pages/banner-management/banner-management.component.html
@@ -9,7 +9,7 @@
     <div class="mb-5 border-solid border-slate-600 border p-3 rounded-xl ring-offset ring-0">
         <div class="flex justify-between items-center mb-5">
             <div class="flex items-center space-x-2">
-                <button class="flex items-center space-x-2 bg-blue-700 text-white font-semibold p-2 rounded" (click)="refreshData()">
+                <button class="flex items-center space-x-2 bg-blue-700 text-white font-semibold p-2 rounded" >
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
                     </svg>
@@ -25,11 +25,14 @@
             </button>
         </div>
         <div class="card-container p-4 m-1 border-solid border-slate-300 border rounded-xl ring-offset ring-0">
-            <nz-card *ngFor="let banner of banners" class="category-card">
+            <nz-card *ngFor="let banner of banners; let i = index" class="category-card">
                 <div class="card-content">
+                    
                     <div class="card-info">
+                        
                         <div class="flex">
-                            <span class="text-2xl font-semibold mr-2 text-blue-700">{{ banner.film }}</span>
+                            
+                            <span class="text-2xl font-semibold mr-2 text-blue-700">{{ banner.film.FilmName }}</span>
                             <div class="flex items-center">
                                 <ng-container *ngIf="banner.isActive; else falseIcon">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2 text-green-500">
@@ -49,18 +52,18 @@
                                 <nz-switch nzSize="small" class="ml-2 bg-red" [(ngModel)]="banner.isActive" [ngModelOptions]="{ standalone: true }"></nz-switch>
                             </p>
                             <div class="flex mt-14 gap-4 border-solid border-slate-600 border p-3 rounded-xl ring-offset ring-0 w-24">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 bg-slate-800 text-green-600 cursor-pointer" (click)="showModalUpdate()">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 bg-slate-800 text-green-600 cursor-pointer" (click)="showModalUpdate(banner.id, banner.film.id,banner.imageUrl)">
                                     <path d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-8.4 8.4a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32l8.4-8.4Z" />
                                     <path d="M5.25 5.25a3 3 0 0 0-3 3v10.5a3 3 0 0 0 3 3h10.5a3 3 0 0 0 3-3V13.5a.75.75 0 0 0-1.5 0v5.25a1.5 1.5 0 0 1-1.5 1.5H5.25a1.5 1.5 0 0 1-1.5-1.5V8.25a1.5 1.5 0 0 1 1.5-1.5h5.25a.75.75 0 0 0 0-1.5H5.25Z" />
                                 </svg>
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 cursor-pointer text-red-600 bg-slate-800" (click)="showModalDelete()">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 cursor-pointer text-red-600 bg-slate-800" (click)="showModalDelete(banner.id)">
                                     <path fill-rule="evenodd" d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z" clip-rule="evenodd" />
                                 </svg>
                             </div>
                         </div>
                     </div>
-                    <img [src]="banner.imageUrl" alt="{{ banner.film }}" class="category-image">
                 </div>
+                <img style="object-fit: contain;" [src]="banner.imageUrl" alt="{{ banner.film.FilmName }}" class="category-image">
             </nz-card>
         </div>
     </div>
@@ -71,21 +74,27 @@
                 <legend class="text-blue-700 text-2xl w-28 ml-2"> Banner </legend>
                 <form [formGroup]="form" nz-form>
                     <nz-form-item>
-                        <nz-form-label nzRequired>Tên Banner</nz-form-label>
+                        <nz-form-label nzRequired>Url Banner</nz-form-label>
                         <nz-form-control>
-                            <input nz-input placeholder="Nhập tên banner" formControlName="film" />
+                            <input nz-input placeholder="Nhập url banner" formControlName="imageUrl" />
                         </nz-form-control>
                     </nz-form-item>
                     <nz-form-item>
-                        <nz-form-label nzRequired>URL Hình ảnh</nz-form-label>
+                        <nz-form-label nzRequired>ID Phim</nz-form-label>
                         <nz-form-control>
-                            <input nz-input placeholder="Nhập URL hình ảnh" formControlName="imageUrl" />
+                            <input nz-input placeholder="Nhập id phim" formControlName="film" />
                         </nz-form-control>
                     </nz-form-item>
                     <nz-form-item class="flex items-center">
                         <nz-form-label class="mr-4">Kích hoạt</nz-form-label>
                         <nz-form-control>
                             <nz-switch formControlName="isActive"></nz-switch>
+                        </nz-form-control>
+                    </nz-form-item>
+                    <nz-form-item class="flex items-center">
+                        <nz-form-label class="mr-4">Delete</nz-form-label>
+                        <nz-form-control>
+                            <nz-switch formControlName="isDeleted"></nz-switch>
                         </nz-form-control>
                     </nz-form-item>
                 </form>
@@ -99,21 +108,27 @@
                 <legend class="text-blue-700 text-2xl w-28 ml-2"> Banner </legend>
                 <form [formGroup]="form" nz-form>
                     <nz-form-item>
-                        <nz-form-label nzRequired>Tên Banner</nz-form-label>
+                        <nz-form-label nzRequired>Url Banner</nz-form-label>
                         <nz-form-control>
-                            <input nz-input placeholder="Nhập tên banner" formControlName="film" />
+                            <input nz-input placeholder="Nhập tên banner" formControlName="imageUrl" />
                         </nz-form-control>
                     </nz-form-item>
                     <nz-form-item>
-                        <nz-form-label nzRequired>URL Hình ảnh</nz-form-label>
+                        <nz-form-label nzRequired>ID Phim</nz-form-label>
                         <nz-form-control>
-                            <input nz-input placeholder="Nhập URL hình ảnh" formControlName="imageUrl" />
+                            <input nz-input placeholder="Nhập id phim" formControlName="film" />
                         </nz-form-control>
                     </nz-form-item>
                     <nz-form-item class="flex items-center">
                         <nz-form-label class="mr-4">Kích hoạt</nz-form-label>
                         <nz-form-control>
                             <nz-switch formControlName="isActive"></nz-switch>
+                        </nz-form-control>
+                    </nz-form-item>
+                    <nz-form-item class="flex items-center">
+                        <nz-form-label class="mr-4">isDelete</nz-form-label>
+                        <nz-form-control>
+                            <nz-switch formControlName="isDeleted"></nz-switch>
                         </nz-form-control>
                     </nz-form-item>
                 </form>
