update: update api with new fields in user table

--- a/src/app/management/pages/user-management/user-management.component.css
+++ b/src/app/management/pages/user-management/user-management.component.css
@@ -183,3 +183,13 @@ textarea {
     background-color: #0d2ebb;
     color: #ffffff;
 }
+.input-search {
+    color: white; 
+    background-color: transparent; 
+    border: 1px solid white; 
+  }
+  
+  .input-search::placeholder {
+    color: rgba(255, 255, 255, 0.6); 
+  }
+  
