update: album album-detail api

--- a/src/app/layouts/main/main-layout/main-layout.component.html
+++ b/src/app/layouts/main/main-layout/main-layout.component.html
@@ -1,3 +1,6 @@
 <app-main-header></app-main-header>
-<router-outlet></router-outlet>
+<div class="wrapper">
+    <router-outlet></router-outlet>
+</div>
+
 <app-main-footer></app-main-footer>
