--- a/src/app/main/pages/album-detail/album-detail.component.html
+++ b/src/app/main/pages/album-detail/album-detail.component.html
@@ -2,100 +2,22 @@
     <div class="container">
         <div class="ant-row">
             <div class="py-10 flex justify-center items-center w-full">
-                <h1 class="text-white text-4xl font-semibold">Anime</h1>
+                <h1 class="text-white text-4xl font-semibold">{{albumName}}</h1>
             </div>
         </div>
         <div class="grid xl:grid-cols-5 lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 gap-4 py-7">
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
+            @for (film of films; track $index) {
+                <div class="h-auto bg-black">
+                    <div class="relative h-36 bg-slate-500 rounded-md">
+                        <a [routerLink]="['/video', film.Id]" class="movie__background" [style]="{ 'background-image': 'url(' + film.ThumbnailUrl + ')' }"></a>
+                    </div>
+                    <h2 class="text-white font-semibold text-lg py-3">
+                        <a [routerLink]="['/video', film.Id]">{{film.FilmName}}</a>
+                    </h2>
                 </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
-            <div class="h-auto bg-black">
-                <div class="relative h-36 bg-slate-500 rounded-md">
-                    <a class="movie__background"></a>
-                </div>
-                <h2 class="text-white font-semibold text-lg py-3">Là tự em đa tình (The Khang show)</h2>
-            </div>
+            }
+            
+            
         </div>
     </div>
 </div>
