--- a/src/app/layouts/main/main-footer/main-footer.component.html
+++ b/src/app/layouts/main/main-footer/main-footer.component.html
@@ -1,6 +1,6 @@
-<footer class="bg-zinc-50 text-center dark:bg-neutral-700 lg:text-left">
-    <div class="bg-black/5 p-4 text-center text-surface dark:text-white">
+<footer class="h-screen relative bg-black text-center dark:bg-neutral-700 lg:text-left">
+    <div class=" footer bg-black/5 p-4 text-center text-surface text-white">
       © 2024 Copyright:
-      <a href="https://tw-elements.com/"> COST UTE</a>
+      <a> COST UTE</a>
     </div>
   </footer>
