--- a/src/app/main/pages/movie/movie.component.html
+++ b/src/app/main/pages/movie/movie.component.html
@@ -15,7 +15,7 @@
       </app-carousel>
       
       @for(album of listAlbum; track $index) {
-          <app-album [listMovie]="album.film" [title]="album.albumName"></app-album>
+          <app-album [listMovie]="album.film" [title]="album.albumName" [idAlbum]="album.id"></app-album>
       }
     
   </div>
