--- a/src/app/main/pages/profile-management/account-settings/account-settings.component.html
+++ b/src/app/main/pages/profile-management/account-settings/account-settings.component.html
@@ -4,15 +4,28 @@
       <div class="profile-details">
         <h3 class="section-title">Thông tin tài khoản</h3>
         <div class="profile-content">
-          <form [formGroup]="profileForm">
+          <form [formGroup]="profileForm" class="profile-form">
             <div class="form-group flex-group">
+              <div class="avatar-container">
+                <img *ngIf="profileForm.get('avatar')?.value" [src]="profileForm.get('avatar')?.value" alt="Avatar" class="avatar-image">
+                <input type="file" (change)="onAvatarChange($event)" style="display: none;" #avatarInput>
+                <button *ngIf="isEditingProfileName" type="button" nz-button nzType="link" class="edit-avatar-button" (click)="avatarInput.click()">
+                  <i class="fa fa-pencil"></i>
+                </button>
+              </div>
               <div class="form-field profile-name-container">
                 <label for="profileName" class="profile-name-label">Họ tên người dùng: </label>
                 <input id="profileName" formControlName="profileName" type="text" class="profile-name-input" [readonly]="!isEditingProfileName">
               </div>
             </div>
-            <button nz-button nzType="primary" class="submit-button" (click)="isEditingProfileName ? saveProfileName() : toggleEditProfileName()">
-              {{ isEditingProfileName ? 'Lưu thông tin' : 'Chỉnh sửa' }}
+            <button *ngIf="!isEditingProfileName" nz-button nzType="primary" class="submit-button" (click)="toggleEditProfileName()">
+              Chỉnh sửa
+            </button>
+            <button *ngIf="isEditingProfileName" nz-button nzType="primary" class="submit-button" (click)="saveProfileName()">
+              Lưu thông tin
+            </button>
+            <button *ngIf="isEditingProfileName" nz-button nzType="default" class="cancel-button" (click)="cancelEdit()">
+              Hủy
             </button>
           </form>
         </div>
@@ -23,49 +36,44 @@
   <div class="login-info">
     <h3 class="section-title">Tài khoản đăng nhập</h3>
     <div class="login-details">
-      <p>Email:  <span class="info-value">{{ profileForm.get('email')?.value }}</span>
+      <p>Email: <span class="info-value">{{ profileForm.get('email')?.value }}</span>
         <a class="info-link" (click)="openChangePasswordModal()">THAY ĐỔI MẬT KHẨU</a>
       </p>
     </div>
   </div>
 
   <!-- Change Password Modal -->
-<nz-modal [(nzVisible)]="isChangePasswordModalVisible" nzTitle="Đổi mật khẩu" (nzOnCancel)="handleCancel()" (nzOnOk)="handlePasswordChange()" [nzOkDisabled]="!isPasswordFormValid">
-  <ng-container *nzModalContent>
-    <form [formGroup]="passwordChangeForm">
-      <div class="form-group">
-        <label for="oldPassword">Nhập mật khẩu cũ:</label>
-        <div class="password-input-container">
-          <input id="oldPassword" formControlName="oldPassword" [type]="passwordTypeOld" nz-input />
-          <button type="button" (mousedown)="showPassword('old')" (mouseup)="hidePassword('old')" (mouseleave)="hidePassword('old')">👁️</button>
+  <nz-modal [(nzVisible)]="isChangePasswordModalVisible" nzTitle="Đổi mật khẩu" (nzOnCancel)="handleCancel()" (nzOnOk)="handlePasswordChange()" [nzOkDisabled]="!isPasswordFormValid">
+    <ng-container *nzModalContent>
+      <form [formGroup]="passwordChangeForm">
+        <div class="form-group">
+          <label for="oldPassword">Nhập mật khẩu cũ:</label>
+          <div class="password-input-container">
+            <input id="oldPassword" formControlName="oldPassword" [type]="passwordTypeOld" nz-input />
+            <button type="button" (mousedown)="showPassword('old')" (mouseup)="hidePassword('old')" (mouseleave)="hidePassword('old')">👁️</button>
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <label for="newPassword">Nhập mật khẩu mới:</label>
-        <div class="password-input-container">
-          <input id="newPassword" formControlName="newPassword" [type]="passwordTypeNew" nz-input />
-          <button type="button" (mousedown)="showPassword('new')" (mouseup)="hidePassword('new')" (mouseleave)="hidePassword('new')">👁️</button>
+        <div class="form-group">
+          <label for="newPassword">Nhập mật khẩu mới:</label>
+          <div class="password-input-container">
+            <input id="newPassword" formControlName="newPassword" [type]="passwordTypeNew" nz-input />
+            <button type="button" (mousedown)="showPassword('new')" (mouseup)="hidePassword('new')" (mouseleave)="hidePassword('new')">👁️</button>
+          </div>
+          <div *ngIf="passwordChangeForm.get('newPassword')?.touched && passwordChangeForm.get('newPassword')?.errors?.['weakPassword']" class="error-message">
+            Mật khẩu mới phải có ít nhất 6 ký tự bao gồm 1 chữ hoa, 1 chữ thường và 1 ký tự đặc biệt.
+          </div>
         </div>
-        <div *ngIf="passwordChangeForm.get('newPassword')?.touched && passwordChangeForm.get('newPassword')?.errors?.['weakPassword']" class="error-message">
-          Mật khẩu mới phải có ít nhất 6 ký tự bao gồm 1 chữ hoa, 1 chữ thường và 1 ký tự đặc biệt.
+        <div class="form-group">
+          <label for="confirmNewPassword">Nhập lại mật khẩu mới:</label>
+          <div class="password-input-container">
+            <input id="confirmNewPassword" formControlName="confirmPassword" [type]="passwordTypeConfirm" nz-input />
+            <button type="button" (mousedown)="showPassword('confirm')" (mouseup)="hidePassword('confirm')" (mouseleave)="hidePassword('confirm')">👁️</button>
+          </div>
+          <div *ngIf="passwordChangeForm.errors?.['mismatch']" class="error-message">
+            Mật khẩu xác nhận không khớp.
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <label for="confirmNewPassword">Nhập lại mật khẩu mới:</label>
-        <div class="password-input-container">
-          <input id="confirmNewPassword" formControlName="confirmPassword" [type]="passwordTypeConfirm" nz-input />
-          <button type="button" (mousedown)="showPassword('confirm')" (mouseup)="hidePassword('confirm')" (mouseleave)="hidePassword('confirm')">👁️</button>
-        </div>
-        <div *ngIf="passwordChangeForm.errors?.['mismatch']" class="error-message">
-          Mật khẩu xác nhận không khớp.
-        </div>
-      </div>
-    </form>
-  </ng-container>
-</nz-modal>
-
-
-
-
-
+      </form>
+    </ng-container>
+  </nz-modal>
 </div>
