--- a/src/app/main/pages/profile-management/manage-login-devices/manage-login-devices.component.html
+++ b/src/app/main/pages/profile-management/manage-login-devices/manage-login-devices.component.html
@@ -12,30 +12,17 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td> 1 </td>
-                        <td> <img src="/movie_img/iphone15.jpg" alt="">Iphone 15</td>
-                        <td> 17 Dec, 2022 </td>
+                    <tr *ngFor="let device of devices">
+                        <td>{{ device.id }}</td>
+                        <td>{{ device.name }}</td>
+                        <td>{{ device.lastUsed | date: 'short' }}</td>
                         <td><span class="fas fa-times"></span></td>
                     </tr>
-                    <tr>
-                        <td> 2 </td>
-                        <td><img src="/movie_img/xiaomi14.jpg" alt="">Xiaomi14</td>
-                        <td> 27 Aug, 2023 </td>
-                        <td><span class="fas fa-times"></span></td>
-                        
+                    <tr *ngIf="devices.length === 0">
+                        <td colspan="4">No devices found.</td>
                     </tr>
-                    <tr>
-                        <td> 3</td>
-                        <td><img src="/movie_img/samsung.jpg" alt="">Samsung Galaxy S22</td>
-                        <td> 14 Mar, 2023 </td>
-                        <td><span class="fas fa-times"></span></td>
-
-                    </tr>
-                    
                 </tbody>
             </table>
         </section>
     </main>
 </section>
-
