fix: routerlink in header lack /

--- a/src/app/layouts/main/main-header/main-header.component.html
+++ b/src/app/layouts/main/main-header/main-header.component.html
@@ -20,14 +20,14 @@
             <a routerLink="home">Trang chủ</a>
           </li>  
           <li nz-menu-item="" class="ant-menu-item">
-            <a [routerLink]="'category/'+convertCategoryNameToSlug(categories[0].categoryName)">{{categories[0].categoryName}}</a>
+            <a [routerLink]="'/category/'+convertCategoryNameToSlug(categories[0].categoryName)">{{categories[0].categoryName}}</a>
           </li>  
           <li nz-menu-item="" class="ant-menu-item">
-            <a [routerLink]="'category/'+convertCategoryNameToSlug(categories[1].categoryName)">{{categories[1].categoryName}}</a>
+            <a [routerLink]="'/category/'+convertCategoryNameToSlug(categories[1].categoryName)">{{categories[1].categoryName}}</a>
           </li> 
       
           <li nz-menu-item="" class="ant-menu-item">
-            <a routerLink="pricing">Mua gói</a>
+            <a routerLink="/pricing">Mua gói</a>
           </li>  
 
           <li nz-menu-item="" class="ant-menu-item">
@@ -39,7 +39,7 @@
               <ul nz-menu nzSelectable>
                 @for (item of categories.slice(2); track item; let i=$index) {
                   <li nz-menu-item="" class="ant-menu-item">
-                    <a [routerLink]="'category/'+convertCategoryNameToSlug(categories[i+2].categoryName)">{{categories[i+2].categoryName}}</a>
+                    <a [routerLink]="'/category/'+convertCategoryNameToSlug(categories[i+2].categoryName)">{{categories[i+2].categoryName}}</a>
                   </li>  
                 }
               </ul>
@@ -54,7 +54,7 @@
         <ul id="nav" nz-menu="" app-navagation="" class="menu-site ant-menu ant-menu-root ant-menu-light ant-menu-horizontal">
           <!-- Search -->
           <li class="icon">
-            <a routerLink="search">
+            <a routerLink="/search">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
               </svg>
@@ -62,7 +62,7 @@
           </li>  
           <!-- Cart -->
           <li class="icon">
-            <a routerLink="me/cart">
+            <a routerLink="/me/cart">
               <nz-badge [nzCount]="cartQuantity">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -72,7 +72,7 @@
           </li>  
           <!-- Notification -->
           <li class="icon">
-            <a routerLink="me/mailbox">
+            <a routerLink="/me/mailbox">
               <nz-badge [nzCount]="notificationQuantity">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
@@ -88,10 +88,10 @@
         <div nz-col="" class="ant-col ant-col-xs-0 ant-col-sm-0 ant-col-md-0 ant-col-lg-0 ant-col-xl-6 ant-col-xxl-4">
           <ul id="nav" nz-menu="" app-navagation="" class="menu-site ant-menu ant-menu-root ant-menu-light ant-menu-horizontal">
             <li nz-menu-item="" class="ant-menu-item">
-              <a routerLink="login" id="btn-auth">Đăng nhập</a>
+              <a routerLink="/login" id="btn-auth">Đăng nhập</a>
             </li>
             <li nz-menu-item="" class="ant-menu-item">
-              <a routerLink="login" id="btn-auth">Đăng ký</a>
+              <a routerLink="/login" id="btn-auth">Đăng ký</a>
             </li>
           </ul>
         </div>
