--- a/src/app/layouts/main/main-footer/main-footer.component.css
+++ b/src/app/layouts/main/main-footer/main-footer.component.css
@@ -1,8 +1,3 @@
-.footer {
-    height: 100%;
-    width: 1280px;
-    margin-bottom: 0;
-    margin-right: auto;
-    margin-left: auto;
-    border-top: solid 1px white;
+footer {
+    min-height: 50px;
 }
