--- a/src/app/layouts/main/main-footer/main-footer.component.html
+++ b/src/app/layouts/main/main-footer/main-footer.component.html
@@ -1,4 +1,4 @@
-<footer class="h-screen relative bg-black text-center dark:bg-neutral-700 lg:text-left">
+<footer class="bg-black text-center dark:bg-neutral-700 lg:text-left">
     <div class=" footer bg-black/5 p-4 text-center text-surface text-white">
       © 2024 Copyright:
       <a> COST UTE</a>
