--- a/src/app/management/pages/dashboard/dashboard.component.html
+++ b/src/app/management/pages/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
         <img
           src="https://dongphucvina.vn/wp-content/uploads/2022/09/Logo-DH-Su-Pham-Ky-Thuat-TP-Ho-Chi-Minh-HCMUTE-623x800.webp"
           alt="logo">
-        <h1>Admin Dashboard</h1>
+        <h1 class="text-lg">Admin Dashboard</h1>
       </a>
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed" class="dashboard">
