--- a/src/app/management/pages/movie-list/movie-list.component.html
+++ b/src/app/management/pages/movie-list/movie-list.component.html
@@ -59,10 +59,13 @@
             </div>
         </div>
         <div class="form-table">
-            <nz-table #basicTable [nzPageSize]="pageSize" ngSkipHydration>
+            <nz-table #basicTable [nzData]="filteredData" [nzPageSize]="pageSize" ngSkipHydration>
                 <thead class="table-head">
                     <tr>
-                       
+                        <th *ngFor="let column of listOfColumn" [nzSortFn]="column.compare"
+                            [nzSortPriority]="column.priority" [ngClass]="{ 'w-1/5': column.title === 'Movie' }">
+                            {{ column.title }}
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
@@ -269,7 +272,7 @@
                     <input nz-input placeholder="Please enter film name" formControlName="FilmName" />
                 </nz-form-control>
             </nz-form-item>
-        
+
             <nz-form-item>
                 <nz-form-label nzRequired>Description</nz-form-label>
                 <nz-form-control>
@@ -277,19 +280,20 @@
                         [nzAutosize]="{ minRows: 2, maxRows: 7 }" formControlName="Description"></textarea>
                 </nz-form-control>
             </nz-form-item>
-        
+
             <div class="form-items-row-4">
                 <nz-form-item class="flex-1 mr-10">
                     <nz-form-label nzFor="genres">Genres</nz-form-label>
                     <nz-form-control>
-                        <nz-select formControlName="genres" nzMode="multiple" [nzAllowClear]="true" class="custom-select">
+                        <nz-select formControlName="genres" nzMode="multiple" [nzAllowClear]="true"
+                            class="custom-select">
                             <nz-option *ngFor="let genre of genres" [nzValue]="genre" [nzLabel]="genre"></nz-option>
                         </nz-select>
                     </nz-form-control>
-        
-        
+
+
                 </nz-form-item>
-        
+
                 <nz-form-item class="flex-1">
                     <nz-form-label nzFor="Language">Language</nz-form-label>
                     <nz-form-control>
@@ -301,28 +305,28 @@
                     </nz-form-control>
                 </nz-form-item>
             </div>
-        
+
             <nz-form-item>
                 <nz-form-label nzFor="Actors">Actors</nz-form-label>
                 <nz-form-control>
                     <input nz-input placeholder="Please enter actors" formControlName="Actors" />
                 </nz-form-control>
             </nz-form-item>
-        
+
             <nz-form-item>
                 <nz-form-label nzFor="Director">Director</nz-form-label>
                 <nz-form-control>
                     <input nz-input placeholder="Please enter director" formControlName="Director" />
                 </nz-form-control>
             </nz-form-item>
-        
+
             <nz-form-item>
                 <nz-form-label nzFor="contentRating">Subtitles</nz-form-label>
                 <nz-form-control>
                     <input nz-input placeholder="Please enter content rating" formControlName="subtitles" />
                 </nz-form-control>
             </nz-form-item>
-        
+
             <div class="form-items-row-4">
                 <nz-form-item>
                     <nz-form-label nzFor="ReleaseDate">Release Date</nz-form-label>
@@ -331,7 +335,7 @@
                             nzFormat="yyyy-MM-dd"></nz-date-picker>
                     </nz-form-control>
                 </nz-form-item>
-        
+
                 <nz-form-item>
                     <nz-form-label nzFor="Duration">Duration</nz-form-label>
                     <nz-form-control>
@@ -345,10 +349,10 @@
                     </nz-form-control>
                 </nz-form-item>
             </div>
-        
+
             <div class="form-items-row-4">
-        
-        
+
+
                 <nz-form-item>
                     <nz-form-label nzFor="Rating">Rating</nz-form-label>
                     <nz-form-control>
@@ -356,15 +360,15 @@
                             [attr.disabled]="true ? true : null" />
                     </nz-form-control>
                 </nz-form-item>
-        
-        
+
+
                 <nz-form-item>
                     <nz-form-label nzFor="Age">Age</nz-form-label>
                     <nz-form-control>
                         <input nz-input type="number" placeholder="Please enter age" formControlName="Age" />
                     </nz-form-control>
                 </nz-form-item>
-        
+
                 <nz-form-item>
                     <nz-form-label nzFor="LimitTime">Limit Time</nz-form-label>
                     <nz-form-control>
@@ -378,14 +382,14 @@
                     <input nz-input placeholder="Please enter thumbnail URL" formControlName="ThumbnailUrl" />
                 </nz-form-control>
             </nz-form-item>
-        
+
             <nz-form-item>
                 <nz-form-label nzFor="TrailerUrl">Trailer URL</nz-form-label>
                 <nz-form-control>
                     <input nz-input placeholder="Please enter trailer URL" formControlName="TrailerUrl" />
                 </nz-form-control>
             </nz-form-item>
-        
+
             <nz-form-item>
                 <nz-form-label nzFor="FilmUrl">Film URL</nz-form-label>
                 <nz-form-control>
