--- a/src/app/main/pages/film-streaming/film-streaming.component.css
+++ b/src/app/main/pages/film-streaming/film-streaming.component.css
@@ -2,6 +2,7 @@
     padding: 2vw;
     color: white;
     font-family: Arial, sans-serif;
+    background-color: #212121;
 }
 
 .content-page::before {
